--- a/.htaccess
+++ b/.htaccess
@@ -1,45 +1,7 @@
-# сжатие text, html, javascript, css, xml:
-<ifModule mod_deflate.c>
-AddOutputFilterByType DEFLATE text/html text/plain text/xml application/xml application/xhtml+xml text/css text/javascript application/javascript application/x-javascript
-</ifModule>
-<IfModule mod_expires.c>
-ExpiresActive On
-ExpiresDefault "access 7 days"
-ExpiresByType application/javascript "access plus 1 year"
-ExpiresByType text/javascript "access plus 1 year"
-ExpiresByType text/css "access plus 1 year"
-ExpiresByType text/html "access plus 7 day"
-ExpiresByType text/x-javascript "access 1 year"
-ExpiresByType image/gif "access plus 1 year"
-ExpiresByType image/jpeg "access plus 1 year"
-ExpiresByType image/png "access plus 1 year"
-ExpiresByType image/jpg "access plus 1 year"
-ExpiresByType image/x-icon "access 1 year"
-ExpiresByType application/x-shockwave-flash "access 1 year"
+<IfModule mod_rewrite.c>
+  RewriteEngine on
+  # RewriteCond %{HTTPS} !=on
+  # RewriteRule ^.*$ https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
+  RewriteRule    ^$ app/webroot/    [L]
+  RewriteRule    (.*) app/webroot/$1 [L]
 </IfModule>
-# Cache-Control
-<ifModule mod_headers.c>
-# 30 дней
-<filesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|swf)$">
-Header set Cache-Control "max-age=2592000, public"
-</filesMatch>
-
-# 30 дней
-<filesMatch "\.(css|js)$">
-Header set Cache-Control "max-age=2592000, public"
-</filesMatch>
-
-# 2 дня
-<filesMatch "\.(xml|txt)$">
-Header set Cache-Control "max-age=172800, public, must-revalidate"
-</filesMatch>
-
-# 1 день
-<filesMatch "\.(html|htm|php)$">
-Header set Cache-Control "max-age=172800, private, must-revalidate"
-</filesMatch>
-</ifModule>
-
-# RewriteEngine On
-# RewriteCond %{HTTPS} !=on
-# RewriteRule ^.*$ https://%{SERVER_NAME}%{REQUEST_URI} [R,L]
